<resources>
    <string name="app_name">WasteTreatment</string>

    <string name="home">首页</string>
    <string name="set">设置</string>
    <!-- 会员登录与注册界面-->
    <string name="login_name_hint">请输入你的账号</string>
    <string name="login_pwd_hint">请输入你的密码</string>
    <string name="login_error_hint">账号或密码错误，请重新输入</string>
    <string name="login_btn_text">登录</string>
    <string name="login_pwd_null">密码或账号不能为空!</string>

    <!--录入信息-->

    <string name="home_page">首页</string>
    <string name="zhonglei">种类:</string>
    <string name="zhongliang">重量:</string>
    <string name="entering_title">录入信息</string>
    <string name="login_up_text">上传</string>


    <!--修改密码-->
    <string name="old_pwd_hint">请输入旧密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="new1_pwd_hint">确认新密码</string>

    <string name="old_pwd">旧&#8194;密&#8194;码:</string>
    <string name="new_pwd">新&#8194;密&#8194;码:</string>
    <string name="new1_pwd">确认密码:</string>
    <string name="submit">提交</string>


    <!--设置-->
    <string name="change_pwd">修改密码</string>
    <string name="print_set">打印机设置</string>

    <!--打印机设置-->
    <string name="print_width">纸张宽度:</string>
    <string name="print_height">纸张高度:</string>
    <string name="print_gray">打印灰度:</string>
    <string name="print_width_hint">请输入纸张宽度(mm)</string>
    <string name="print_height_hint">请输入纸张高度(mm)</string>
    <string name="revise_paper">校正纸张</string>
    <string name="save">保存</string>
    <string name="print_error">打印机故障</string>


</resources>
