<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:orientation="vertical">

        <include layout="@layout/base_title"
            android:id="@+id/il_title"/>

        <LinearLayout
            android:layout_marginTop="80dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical">
            <ImageView
                android:layout_marginStart="14.5dp"
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:src="@mipmap/login_people"
                />
            <EditText
                android:id="@+id/login_name_edt"
                android:layout_width="match_parent"
                android:layout_marginStart="14dp"
                android:background="@null"
                android:textSize="14sp"
                android:singleLine="true"
                android:hint="@string/login_name_hint"
                android:layout_height="40dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_text_line"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bg_edit"
            android:gravity="center_vertical">
            <ImageView
                android:layout_marginStart="14.5dp"
                android:layout_width="16dp"
                android:layout_height="18dp"
                android:src="@mipmap/login_lock"
                />
            <EditText
                android:id="@+id/login_pwd_edt"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"

                android:background="@null"
                android:textSize="14sp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:hint="@string/login_pwd_hint"
                android:layout_height="40dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/error_ll"
            android:layout_marginTop="26dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_height="15dp">
            <ImageView
                android:layout_marginStart="12.5dp"
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:scaleType="centerCrop"
                android:background="@mipmap/login_hint"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:text="@string/login_error_hint"
                android:textSize="12sp"
                android:layout_marginStart="5.5dp"
                android:textColor="@color/color_hint_text"/>

        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:text="@string/login_btn_text"
            android:textColor="@color/color_white"
            android:textSize="18sp"
            android:background="@drawable/login_btn"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_height="50dp"/>

    </LinearLayout>

</layout>

