<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.EnteringActivity">
        <include
            android:id="@+id/title"
            layout="@layout/base_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_text_line"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:background="@drawable/entering_item"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/zhonglei"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/entering_item_text" />

                <Spinner
                    android:id="@+id/spinner_zl"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:entries="@array/zhonglei" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:layout_marginTop="1dp"
                android:background="@drawable/entering_item"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="名称："
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/entering_item_text" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/entering_item_text"
                    android:background="@null" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_bar_high"
                android:layout_marginTop="1dp"
                android:background="@drawable/entering_item"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/tv_weight"
                    android:layout_width="@dimen/dp_60"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/zhongliang"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/entering_item_text" />

                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/tv_dw"
                    android:layout_toEndOf="@id/tv_weight"
                    android:gravity="center_vertical|end"
                    android:hint="请输入重量（单位KG）"
                    android:background="@null"
                    android:textSize="@dimen/entering_item_text"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/tv_dw"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:text="KG"
                    android:textColor="@color/color_black"
                    android:textSize="@dimen/entering_item_text" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="5dp"
                android:background="@drawable/entering_item"
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageView
                    android:id="@+id/img_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/ig_jia_btn"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/jia"/>
                <ImageButton
                    android:id="@+id/ig_del_btn"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="invisible"
                    android:background="@mipmap/cha"/>

            </RelativeLayout>

            <Button
                android:id="@+id/update_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/login_btn"
                android:text="@string/login_up_text"
                android:textColor="@color/color_white"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>
</layout>